@@ -1,5 +1,12 @@
 2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>
 
+	* config/mep/mep.c (mep_store_find_set): Take a const_rtx and
+	return a bool.  Replace "void *" with specific type.  Iterate
+	over all subrtxes.
+	(mep_store_data_bypass_1): Update calls accordingly.
+
+2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>
+
 	* config/mep/mep.c: Include rtl-iter.h.
 	(global_reg_mentioned_p_1): Take a const_rtx and return a bool.
 	(xtensa_tls_referenced_p): Return a bool.  Use FOR_EACH_SUBRTX.
